# Dev/CI packaging for ga-frontend-bundle.
#
# The integration is NOT pip-installed — it ships as a vendored
# custom_components/ directory baked into the GA OS image. This file exists only
# to configure the dev tooling (pytest, ruff) used in CI.

[project]
name = "ga-frontend-bundle"
version = "1.0.1"
description = "GreenAutarky de-HACS Lovelace card bundle: a vendored HA custom integration that serves a pinned set of frontend cards."
requires-python = ">=3.12"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=8", "PyYAML>=6"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
